# LwLearnOpenGLMiddle

./: .gitignore  README.md
10_HelloIMGUI/: CMakeLists.txt
10_HelloIMGUI/glframework/: geometry.h
10_HelloIMGUI/src/: main.cpp
11_HelloIParentChild/: CMakeLists.txt
11_HelloIParentChild/application/: application.cpp
11_HelloIParentChild/application/camera/: cameracontrol.h
11_HelloIParentChild/glframework/: mesh.cpp  mesh.h  object.h
11_HelloIParentChild/glframework/material/: material.h
11_HelloIParentChild/src/: main.cpp
12_HelloISceneBasedRendering/glframework/: object.cpp  scene.h  texture.cpp  texture.h
13_HelloIReadingModel/application/: CMakeLists.txt  assimploader.cpp  assimploader.h
13_HelloIReadingModel/glframework/: object.cpp  object.h  texture.cpp  texture.h
13_HelloIReadingModel/imgui/: CMakeLists.txt
14_HelloIReadingModel_specular/: CMakeLists.txt
14_HelloIReadingModel_specular/application/: application.h  assimploader.cpp  assimploader.h
14_HelloIReadingModel_specular/application/camera/: cameracontrol.cpp  orthographicCamera.h
14_HelloIReadingModel_specular/assets/shaders/: phong.frag  phong.vert
14_HelloIReadingModel_specular/glframework/: shader.cpp  texture.cpp  texture.h
14_HelloIReadingModel_specular/glframework/material/: phonematerial.h
14_HelloIReadingModel_specular/glframework/renderer/: renderer.cpp  renderer.h
14_HelloIReadingModel_specular/glframework/util/: util.cpp
14_HelloIReadingModel_specular/src/: main.cpp
1_HelloDiffuse/: CMakeLists.txt
1_HelloDiffuse/glframework/: shader.cpp
1_HelloDiffuse/src/: main.cpp
2_HelloSpecular/glframework/: CMakeLists.txt  texture.cpp
3_HelloNormalMatrix/: CMakeLists.txt
3_HelloNormalMatrix/src/: main.cpp
4_HelloStruct/: CMakeLists.txt
5_HelloSpecularMask/: CMakeLists.txt
5_HelloSpecularMask/glframework/: object.cpp
5_HelloSpecularMask/src/: main.cpp
6_HelloPointLight/glframework/: geometry.cpp
7_HelloSpotLightBlurEdge/glframework/: shader.cpp
HelloDiffuse/application/: application.cpp
HelloDiffuse/glframework/: core.h  shader.h
HelloIParentChild/glframework/: CMakeLists.txt  object.cpp
HelloIParentChild/src/: main.cpp
HelloIParentChild/wrapper/: CMakeLists.txt  check_error.cpp
HelloIReadingModel/: CMakeLists.txt
HelloIReadingModel/application/: assimploader.cpp
HelloIReadingModel/glframework/: CMakeLists.txt  core.h  geometry.cpp  geometry.h  mesh.cpp  scene.cpp  scene.h
HelloIReadingModel/src/: main.cpp
HelloISceneBasedRendering/: CMakeLists.txt
HelloISceneBasedRendering/glframework/: CMakeLists.txt  object.h
HelloISceneBasedRendering/src/: main.cpp
HelloNormalMatrix/application/: CMakeLists.txt
HelloNormalMatrix/src/: main.cpp
HelloPointLight/: CMakeLists.txt
HelloPointLight/application/: application.h
HelloPointLight/glframework/: CMakeLists.txt  object.h
HelloPointLight/glframework/light/: ambientlight.h
HelloPointLight/glframework/renderer/: renderer.h
HelloPointLight/src/: main.cpp
HelloSpecular/: CMakeLists.txt
HelloSpecular/src/: main.cpp
HelloSpotLight/: CMakeLists.txt
HelloSpotLight/glframework/: shader.h
HelloSpotLight/src/: main.cpp
HelloSpotLight/wrapper/: check_error.h
HelloSpotLightBlurEdge/: CMakeLists.txt
HelloSpotLightBlurEdge/src/: glad.c  main.cpp
HelloStruct/glframework/: CMakeLists.txt
HelloStruct/src/: main.cpp
(+54 files in other folders)
